fixing button a11y contrast

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 button {
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 18px;
   padding: 8px 24px;
   border: none;
