--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -25,7 +25,7 @@ img {
   transform: translate(-50%, -250%);
   -ms-transform: translate(-50%, -50%);
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 16px;
   padding: 12px 24px;
   border: none;
@@ -53,7 +53,7 @@ img {
 
 .sign-up-link {
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 18px;
   padding: 8px 24px;
   border: none;
