--- a/src/routes/AddRecipeRoute/AddRecipeRoute.css
+++ b/src/routes/AddRecipeRoute/AddRecipeRoute.css
@@ -28,7 +28,7 @@
 
 .cancel-button {
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 18px;
   padding: 8px 24px;
   border: none;
