--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -14,7 +14,7 @@ li {
 
 .delete-button {
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 18px;
   padding: 8px 15px;
   border: none;
@@ -26,7 +26,7 @@ li {
 
 .add-recipe-link-button {
   color: white;
-  background-color: #0096c7;
+  background-color: #1f59e0;
   font-size: 18px;
   padding: 8px 24px;
   border: none;
